# mav_active_3d_planning

active_3d_planning_app_reconstruction/cfg/experiments/: test.rviz
active_3d_planning_app_reconstruction/cfg/planners/: merge.yaml
active_3d_planning_app_reconstruction/launch/: merge.launch
active_3d_planning_app_reconstruction/scripts/: test.sh
active_3d_planning_app_reconstruction/src/experiments/: eval_data_node.py
active_3d_planning_kr_interface/: CMakeLists.txt  package.xml
active_3d_planning_kr_interface/include/active_3d_planning_kr_interface/: active_3d_planning_kr_tracker_interface.h
active_3d_planning_kr_interface/src/: active_3d_planning_kr_tracker_interface.cpp  kr_tracker_interface.cpp
active_3d_planning_ros/src/planner/: ros_planner.cpp
